css/styles.css
@import url("https://fonts.googleapis.com/css?family=Roboto:400,700,900");

/*global*/

body{
  margin: 0;
  color: #fbfbfb;
}

h1, h2, h3, p, ul {
  font-family: 'Roboto', sans-serif;
  color: #000000;
}

h1{
  font-size: 1.2em;
  font-weight: 900;
  letter-spacing: 1px;
  padding-bottom: 20px;
}

h2{
  font-size: 1.1em;
  font-weight: 700;
  letter-spacing: 1px;
}

h3{
  font-size: 1.1em;
  font-weight: 400;
}

p{
  color: #333333;
  line-height: 30px;
}

a{
  text-decoration: none;
  color: darkgrey;
}

ul{
  padding-left: 5%;
  list-style-type: none;
  padding: 5px 15px;
  color: #333333;
}

li{
  padding: 10px 0;
}

/*layout*/

header{
  color: #ffffff;
}

.logo{
  font-size: 1em;
  display: inline-block;
  padding-left: 1%;
}

.hero{
  background-image: url("../assets/hero.jpg");
  height: 490px;
  background-size: cover;
  background-position: 28%;
}

.sect_information{
  padding: 55px 80px;
}

.about{
  /*border: 2px solid darkgrey;*/
  width: 50%;
  display: inline-block;
}

.purchase_list{
  /*border: 2px solid grey;*/
  width: 39%;
  display: inline-block;
  float: right; 
}

.recipe{
  /*border: 2px solid beige;*/
  display: inline-block;
  margin-top: 55px;
  border: dashed 1px black;
  border-radius: 8px;
  padding: 10px;
  width: 50%;
}

.sect_schedule{
  display: inline-block;
  background-color: #171820;
  padding: 55px 100px;
}

.sect_schedule h1{
  color: #fbfbfb;
  letter-spacing: 1px;
}

.sect_schedule h2{
  color: #fbfbfb;
  letter-spacing: 1px;
}

.sect_schedule h3{
  color: #fbfbfb;
}

.sect_schedule li{
  color: #fbfbfb;
}

.diet_schedule{
  width: 50%;
  /*border: 2px solid green;*/
  display: inline-block;
}

.supplement_schedule{
  width: 48%;
  /*border: 2px solid salmon;*/
  display: inline-block;
  float: right;
}

.activity_schedule{
  width: 50%;
  /*border: 2px solid pink;*/
  display: inline-block;
}

.sect_restrictions{
  display: inline-block;
  padding-left: 10px;
  padding: 55px 80px;
}

footer{
  background-color: #ffffff;
  text-align: center;
}

/* ***** SMALL ONLY **** */
@media (max-width: 720px){

  .sect_information{
    padding: 0 10px;
    margin-top: 25px;
  }

  .sect_schedule{
    padding: 0 10px;
    margin-top: 25px;

  }

  .sect_restrictions{
    padding: 0 10px;
    margin-top: 25px;

  }

  .hero{
    height: 300px;
  }

  .about{
    display: block;
    width: 100%;
  }

  .purchase_list{
    display: block;
    width: 100%;
    margin-top: 50px;
  }

  .recipe{
    display: inline-block;
    width: 94%;
  }

  .diet_schedule{
    display: block;
    width: 100%;
    margin-top: 50px;
  }

  .supplement_schedule{
    display: block;
    width: 100%;
    margin-top: 50px;
    padding: 0;
  }

  .activity_schedule{
    /*display: block;*/
    width: 100%;
    margin-top: 50px;
  }
}

